Revision history for Perl extension Module::Build.

0.31_03 - 

 Enhancements
 - added a "prereq_data" action that prints a Perl data structure of
   all prerequisites; can be loaded by external tools using eval()
   [David Golden]

 Bug-fixes
 - 'fakeinstall' action warns and skips without ExtUtils::Install 1.32+
   [David Golden, reported by Zefram]
   
0.31_02 - Tue Jan 27 09:16:43 PST 2009

 Other
 - tests now use File::Temp (added to build_requires); appears to fix
   Win32 testing heisenbug on directory removal during high system loads
 - use_tap_harness.t will skip unless a release version of TAP::Harness
   is installed
 - improved diagnostics to ensure_blib() tests in t/lib/MBTest.pm

 Compat
 - passthrough Makefile.PL will now play nice with cpantesters' on
   exit(0) (RT#32018) [Eric Wilhelm]

 Bug Fixes
 - fix for doubling-up of --prefix (RT#19951)

0.31012 - Wed Jan 14 01:36:19 PST 2009

 Bug Fixes
 - t/tilde.t maybe actually fixed on MSWin32 now.

0.31011 - Mon Jan 12 21:57:04 PST 2009

 Bug Fixes
 - t/tilde.t had been failing on MSWin32 (RT#42349)

0.3101 - Mon Jan 12 13:52:36 PST 2009

 Other
 - added 'mirbsd' as a Unix-type OS [BinGOs]
 - added 'haiku' as a Unix-type OS (backported from bleadperl)
 - skips certain tests on VMS (backported from bleadperl)
 - sets $^X to absolute path in tests (backported from bleadperl)

0.31 - Sat Dec 20 15:03:33 2008

 Deprecations
 - Use of attributes as class methods is deprecated (this was never a
   documented feature and appears to only have worked accidentally.)

0.30_02 - Mon Dec 15 12:23:55 PST 2008

 Bug Fixes
 - make Software::License dependency "softer".

0.30_01 - Thu Dec 11 18:25:53 PST 2008

 New Docs
 - Added a recipe for writing a new action to the Cookbook
 - Added a recipe for bundling Module::Build to the Cookbook.

 Doc Fixes
 - Clarified dist_abstract search procedure in API.pod (RT#41056) [Mario
   Domgoergen]

 Bug Fixes
 - Workaround HARNESS_TIMER env issue in t/compat.t (RT#39635)